crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@mlsd__pure-ftpd.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/mlsd/pure-ftpd.txt
---
format: mlsd
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: big.iso
    kind: file
    size: 5368709120
    modified: "2023-07-15T08:30:00Z (Second)"
    permissions: rw-r--r-- (644)
    owner: "1000"
    group: "1000"
    hidden: false
  - name: private
    kind: dir
    size: ~
    modified: "2024-01-01T00:00:00Z (Second)"
    permissions: rwx------ (700)
    owner: "1000"
    group: "1000"
    hidden: false
  - name: leap-day.txt
    kind: file
    size: 12
    modified: "2024-02-29T23:59:59Z (Second)"
    permissions: rw------- (600)
    owner: "1000"
    group: "1000"
    hidden: false
skipped: []
